Reworked the network again. This time it seems like it works well.

--- a/assets/pipelinemod/lang/en.json
+++ b/assets/pipelinemod/lang/en.json
@@ -1,6 +1,7 @@
 {
-    "hello": "hello world!",
     "game:tabname-pipelines": "Pipeline Mod",
-    "block-pipesegment": "Pipe segment",
-    "block-pipepump": "Water pump",
+    "pipelinemod:block-pipesegment": "Lead pipe section",
+    "pipelinemod:block-pipeinlet": "Fluid inlet",
+    "pipelinemod:block-pipepump-north": "Fluid pump",
+    "pipelinemod:block-pipesprinkler-up": "Water sprinkler"
 }
