--- a/assets/pipelinemod/lang/en.json
+++ b/assets/pipelinemod/lang/en.json
@@ -1,7 +1,14 @@
 {
     "game:tabname-pipelines": "Pipeline Mod",
-    "pipelinemod:block-pipesegment": "Lead pipe section",
+    "pipelinemod:block-pipesegment-lead": "Lead pipe section",
     "pipelinemod:block-pipeinlet": "Fluid inlet",
     "pipelinemod:block-pipepump-north": "Fluid pump",
-    "pipelinemod:block-pipesprinkler-up": "Water sprinkler"
+    "pipelinemod:block-pipesprinkler-up": "Water sprinkler",
+    "pipelinemod:block-pipemold-*-*": "Pipe mold",
+    
+    "pipelinemod:handbook-pipemold-title": "Mold for lead pipes",
+    "pipelinemod:handbook-pipemold-text": "Use a <a href=\"handbook://item-pipelinemod:pipeshaper\">pipe shaper tool</a> when the metal is soft to create <a href=\"handbook://block-pipelinemod:pipesegment-lead\">lead pipes</a>. When cooled completely, you will get a plate instead.<br><br>Only lead can be added, as other metals would be too hot and destroy the mold.",
+
+    "pipelinemod:handbook-pipesegment-title": "Lead pipe section",
+    "pipelinemod:handbook-pipesegment-text": "Automatically connects to other pipe sections. Crafted by molding using a <a href=\"handbook://block-pipelinemod:pipemold-fired-plate\">pipe mold</a> and a <a href=\"handbook://item-pipelinemod:pipeshaper\">pipe shaper tool</a>."
 }
