--- a/assets/pipelinemod/lang/en.json
+++ b/assets/pipelinemod/lang/en.json
@@ -5,16 +5,29 @@
     "pipelinemod:block-pipepump-north": "Fluid pump",
     "pipelinemod:block-pipesprinkler-up": "Water sprinkler",
     "pipelinemod:block-pipemold-fired-plate": "Pipe mold",
+    "pipelinemod:item-pipeshaper": "Pipe shaper",
     
+    
+    // Handbook blocks/items
     "pipelinemod:handbook-pipemold-title": "Mold for lead pipes",
-    "pipelinemod:handbook-pipemold-text": "Pour in molten lead and use a <a href=\"handbook://item-pipelinemod:pipeshaper\">pipe shaper tool</a> when the metal is soft to create <a href=\"handbook://block-pipelinemod:pipesegment-lead\">lead pipes</a>. If the shaper tool is not used, you will get a plate instead.<br><br>Only lead can be used, as other metals would be too hot and destroy the mold.",
-
+    "pipelinemod:handbook-pipemold-text": "Pour in molten lead and use a <a href=\"handbook://item-pipelinemod:pipeshaper\">pipe shaper tool</a> when the metal is soft to create <a href=\"handbook://block-pipelinemod:pipesegment-lead\">lead pipes</a>. If the shaper tool is not used, you will get a plate instead.<br><br>Only lead can be used, as its melting temperature is low enough for the mold to handle. Other metals would be too hot and destroy the mold.",
     "pipelinemod:handbook-pipesegment-title": "Lead pipe section",
     "pipelinemod:handbook-pipesegment-text": "Automatically connects to other pipe sections. Crafted by molding using a <a href=\"handbook://block-pipelinemod:pipemold-fired-plate\">pipe mold</a> and a <a href=\"handbook://item-pipelinemod:pipeshaper\">pipe shaper tool</a>.",
+    "pipelinemod:handbook-pipeshaper-title": "Pipeline shaper",
+    "pipelinemod:handbook-pipeshaper-text": "Used to 'fold' soft lead in a <a href=\"handbook://block-pipelinemod:pipemold-fired-plate\">pipe mold</a> to create <a href=\"handbook://block-pipelinemod:pipesegment-lead\">lead pipes</a>.",
+    "pipelinemod:handbook-pipepump-title": "Fluid pump",
+    "pipelinemod:handbook-pipepump-text": "Pushes and pulls fluids in <a href=\"handbook://block-pipelinemod:pipesegment-lead\">lead pipes</a>. Connects to the <a href=\"handbook://gamemechanicinfo-mechanicalpower\">mechanical network</a> to move a piston back and forth. Valves in the connected pipes forces fluids to flow in a particular direction. The input is marked in <font color=\"#FF4858\">red</font> while the output is marked in <font color=\"#7392FF\">blue</font>. Faster pumps can reach further.",
+    "pipelinemod:handbook-fluidinlet-title": "Fluid inlet",
+    "pipelinemod:handbook-fluidinlet-text": "Allows fluids, specifically water, to flow into the pipe network. Inlets only work when there's something pulling fluids in, such as a <a href=\"handbook://block-pipelinemod:pipepump-north\">fluid pump</a>.",
+    "pipelinemod:handbook-pipesprinkler-title": "Sprinkler",
+    "pipelinemod:handbook-pipesprinkler-text": "Sprays water in a 3x3 area below the sprinkler, when water flows from a <a href=\"handbook://block-pipelinemod:pipesegment-lead\">lead pipe</a>. Requires water to be pushed to the sprinkler to operate. This can be achieved using a <a href=\"handbook://block-pipelinemod:pipepump-north\">fluid pump</a>.",
     
+    
+    
+    // WorldInteraction
     "pipelinemod:blockhelp-pipemold-fold": "Shape pipe",
     
-    
+    // handbook guide
     "introduction-title": "Mod Mechanic: Fluid Pipes and Pumps",
     "introduction-text": "<strong>Fluid Pipes and Pumps</strong>\n\nMoving fluids such as water around can be used to perform certain tasks without the need for manual intervention. One of such tasks would be watering farmland. This can be achieved using a <a href=\"handbook://block-pipelinemod:pipesprinkler-up\">sprinkler</a>.\n\n<strong>Pipelines</strong>\n\nIn order to bring fluids, such as water, to a destination, <a href=\"handbook://block-pipelinemod:pipesegment-lead\">pipes</a> are required.\n\nTo build pipes, you will need to make a <a href=\"handbook://block-pipelinemod:pipemold-fired-plate\">pipe mold</a> and a <a href=\"handbook://item-pipelinemod:pipeshaper\">pipe shaper</a>. First you need to fill the mold with molten lead. About 2 ingots worth should be sufficient. While the lead cools, you can <hk>shift</hk> + <hk>rightmouse</hk> with the <a href=\"handbook://item-pipelinemod:pipeshaper\">pipe shaper</a> tool when the lead is <strong>soft</strong> in order to shape pipes. This forms about 8 <a href=\"handbook://block-pipelinemod:pipesegment-lead\">lead pipe sections</a>. If you wait too long and the lead hardens, it'll form a <a href=\"handbook://item-metalplate-lead\">plate</a> instead.\n\nWhen you place a pipe, it automatically connects to neighbouring pipes. Pipes also connect to <a href=\"handbook://block-pipelinemod:pipeinlet\">sources</a> and <a href=\"handbook://block-pipelinemod:pipesprinkler-up\">destinations</a>.\n\n<strong>Moving fluids around</strong>\n\nMost fluids, like water, don't flow on their own. They need something to push / pull water. This is where the <a href=\"handbook://block-pipelinemod:pipepump-north\">Fluid pumps</a> come in.\n\nPumps connect to the <a href=\"handbook://gamemechanicinfo-mechanicalpower\">mechanical network</a>. The speed of the pump effect its pumping range. Pumps are able to pull water from sources like the <a href=\"handbook://block-pipelinemod:pipeinlet\">water inlet</a> and push it into the pipes. They are limited in range by their pumping speed. The faster the speed, the further they can move water. Looking at a pump will tell you the current range.\n\nPumps have an input side and an output side. The input is marked in <font color=\"#FF4858\">red</font> while the output is marked in <font color=\"#7392FF\">blue</font>.\n\nYou can also chain pumps in order to increase the total range. If a pump is reaching 10 blocks, placing another pump on the 10th block would add another 10 blocks down the line, assuming both are powered.\n"
     
